FIX: unnecessary gaps above nav bar

--- a/act2/styles.css
+++ b/act2/styles.css
@@ -27,6 +27,11 @@
   padding: 5%;
 }
 
+.body, .page-content {
+  margin: 0;
+}
+
+
 /* On mouse-over, add a deeper shadow */
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
@@ -36,6 +41,8 @@
   background-color: teal;
   list-style-type: none;
   text-align: center;
+  margin: 0;
+  padding: 0;
 }
 .nav li {
   display: inline-block;
